admin questions: do not show edit icon on options if election is in non-editable mode

--- a/avAdmin/admin-directives/question-option-details/question-option-details.html
+++ b/avAdmin/admin-directives/question-option-details/question-option-details.html
@@ -4,7 +4,10 @@
     <span
       class="text"
       ng-click="setEdit(electionEditable() && true)">
-      <span class="glyphicon glyphicon-edit"></span>
+      <span
+        ng-if="electionEditable()"
+        class="glyphicon glyphicon-edit">
+      </span>
       {{ answer.text }}
     </span>
   </div>
