admin census: making remove confirm dialog danger-red

--- a/avAdmin/admin-directives/elcensus/confirm-remove-people-modal.html
+++ b/avAdmin/admin-directives/elcensus/confirm-remove-people-modal.html
@@ -1,4 +1,4 @@
-<div class="modal-header dialog-header-warning">
+<div class="modal-header dialog-header-danger">
   <h4 class="modal-title">
     <span class="glyphicon glyphicon-warning-sign">
     </span>
@@ -19,7 +19,7 @@
   </p>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-success" ng-click="ok()" ng-i18next>
+  <button class="btn btn-danger" ng-click="ok()" ng-i18next>
     [i18next]({num: numSelectedShown})avAdmin.census.modals.confirmRemovePeopleButton
   </button>
   <button class="btn" ng-click="cancel()" ng-i18next>
