making export census work again, with progress bar and modal dialog

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
   <script src="avAdmin/admin-directives/elcensus/add-person-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/add-csv-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/confirm-remove-people-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elcensus/export-all-census-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus-config/elcensus-config.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/confirm-create-modal.js" class="app"></script>
