--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -84,7 +84,7 @@
       <tbody>
         <tr
           ng-class="{'success': c.selected}"
-          ng-repeat="c in election.census.voters">
+          ng-repeat="c in filteredVoters()">
           <td class="small-col">
             <input type="checkbox" ng-model="c.selected" />
             <div class="text-right">{{c.id}}</div>
@@ -101,7 +101,7 @@
             {{ c.metadata[field.name] }}
           </td>
         </tr>
-        <tr ng-if="!loading && filteredVoters.length === 0 && election.census.voters.length > 0">
+        <tr ng-if="!loading && filteredVoters().length === 0 && election.census.voters.length > 0">
           <td
             class="wide text-muted"
             colspan="{{election.census.extra_fields.length + 2}}"
