--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
   <script src="avAdmin/admin-directives/question/question.js" class="app"></script>
   <script src="avAdmin/admin-directives/eltally/eltally.js" class="app"></script>
   <script src="avAdmin/admin-directives/create/create.js" class="app"></script>
+  <script src="avAdmin/admin-directives/census-field/census-field.js" class="app"></script>
   <script src="avAdmin/admin-directives/elections/elections.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/add-person-modal.js" class="app"></script>
