--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="bower_components/angular-animate/angular-animate.js" class="lib"></script>
   <script src="bower_components/angular-resource/angular-resource.js" class="lib"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js" class="lib"></script>
+  <script src="bower_components/angular-bootstrap/dropdown.js" class="lib"></script>
   <script src="bower_components/angular-ui-utils/ui-utils.js" class="lib"></script>
   <script src="bower_components/angular-cookies/angular-cookies.js" class="lib"></script>
   <script src="bower_components/angular-load/angular-load.js" class="lib"></script>
@@ -207,6 +208,7 @@
   <script src="avAdmin/admin-directives/import/import.js" class="app"></script>
   <script src="avAdmin/admin-directives/question-option-simple/question-option-simple.js" class="app"></script>
   <script src="avAdmin/admin-directives/question-option-details/question-option-details.js" class="app"></script>
+  <script src="avAdmin/admin-directives/column-filters/int/column-filter-int.js" class="app"></script>
   <script src="avAdmin/import-service.js" class="app"></script>
   <!-- endof admin directives -->
 
