admin census: int id filtering now works, connected with the api

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -72,7 +72,7 @@
             <div
               av-column-filter-int
               filter-options-var="filterOptions"
-              filter-prefix="user__user__id"
+              filter-prefix="census__user__user__id"
               filter-i18n="avAdmin.census.idColumnHeader">
             </div>
           </th>
