--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
   <script src="avAdmin/admin-directives/question-option-simple/question-option-simple.js" class="app"></script>
   <script src="avAdmin/admin-directives/question-option-details/question-option-details.js" class="app"></script>
   <script src="avAdmin/admin-directives/column-filters/int/column-filter-int.js" class="app"></script>
+  <script src="avAdmin/admin-directives/column-filters/bool/column-filter-bool.js" class="app"></script>
   <script src="avAdmin/import-service.js" class="app"></script>
   <!-- endof admin directives -->
 
