--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <script src="vendor/crypto/sha1.js" class="lib"></script>
   <script src="vendor/crypto/sha2.js" class="lib"></script>
   <script src="vendor/crypto/sjcl.js" class="lib"></script>
+  <script src="vendor/angular-date-picker-polyfill/angular-date-picker-polyfill.js" class="lib"></script>
   <script src="vendor/jquery.nanoscroller/nanoscroller.js" class="lib"></script>
   <script src="vendor/jquery.actual/jquery.actual.js" class="lib"></script>
   <script src="vendor/iframe-resizer/iframeResizer.contentWindow.min.js" class="lib"></script>
@@ -210,6 +211,7 @@
   <script src="avAdmin/admin-directives/question-option-details/question-option-details.js" class="app"></script>
   <script src="avAdmin/admin-directives/column-filters/int/column-filter-int.js" class="app"></script>
   <script src="avAdmin/admin-directives/column-filters/bool/column-filter-bool.js" class="app"></script>
+  <script src="avAdmin/admin-directives/column-filters/datetime/column-filter-datetime.js" class="app"></script>
   <script src="avAdmin/import-service.js" class="app"></script>
   <!-- endof admin directives -->
 
