admin census: showing filter datetime as datetime instead of date only

--- a/avAdmin/admin-directives/column-filters/datetime/column-filter-datetime.html
+++ b/avAdmin/admin-directives/column-filters/datetime/column-filter-datetime.html
@@ -39,7 +39,7 @@
           avAdmin.columnFilter.minDate
         </span>
         <button type='button' tabindex='0' ng-model='min' aa-date-time-input>
-          <span ng-show='min'>{{ min | date:'shortDate'}}</span>
+          <span ng-show='min'>{{ min | date:'short'}}</span>
           <span ng-hide='min'>-</span>
         </button>
       </div>
@@ -48,7 +48,7 @@
           avAdmin.columnFilter.maxDate
         </span>
         <button type='button' tabindex='0' ng-model='max' aa-date-time-input>
-          <span ng-show='max'>{{ max | date:'shortDate'}}</span>
+          <span ng-show='max'>{{ max | date:'short'}}</span>
           <span ng-hide='max'>-</span>
         </button>
       </div>
