admin census: fix overflow-x

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script type="text/javascript" src="bower_components/file-saver/FileSaver.min.js" class="lib"></script>
   <script src="bower_components/ng-file-upload/angular-file-upload.js" class="lib"></script>
   <script src="bower_components/ng-autofocus/dist/ng-autofocus.js" class="lib"></script>
+  <script src="bower_components/css-element-queries/src/ResizeSensor.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- JS from Vendor Components -->
