admin census: fixing big height tables, this time for real

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -163,7 +163,7 @@
             <span ng-i18next>loading</span>
           </td>
         </tr>
-      <tobdy>
+      </tbody>
     </table>
 
     <button
