--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -10,6 +10,8 @@
   </div>
   <div avb-multi-question ng-if="state == stateEnum.multiQuestion">
   </div>
+  <div avb-pairwise-beta ng-if="state == stateEnum.pairwiseBeta">
+  </div>
   <div avb-drafts-election-screen ng-if="state == stateEnum.draftsElectionScreen">
   </div>
   <div avb-pcandidates-election-screen ng-if="state == stateEnum.pcandidatesElectionScreen">
