--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script src="bower_components/ng-file-upload/angular-file-upload.js" class="lib"></script>
   <script src="bower_components/ng-autofocus/dist/ng-autofocus.js" class="lib"></script>
   <script src="bower_components/css-element-queries/src/ResizeSensor.js" class="lib"></script>
+  <script src="bower_components/rng-js/rng.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- JS from Vendor Components -->
@@ -89,6 +90,7 @@
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
+  <script src="crypto/random-helper-service.js" class="app"></script>
   <script src="crypto/deterministic-json-stringify-service.js" class="app"></script>
   <script src="crypto/bigint-service.js" class="app"></script>
   <script src="crypto/sjcl-service.js" class="app"></script>
@@ -122,6 +124,7 @@
   <script src="avBooth/pcandidates-rows-directive/pcandidates-rows-directive.js" class="app"></script>
   <script src="avBooth/pcandidates-row-directive/pcandidates-row-directive.js" class="app"></script>
   <script src="avBooth/pcandidates-cell-directive/pcandidates-cell-directive.js" class="app"></script>
+  <script src="avBooth/pairwise-beta-directive/pairwise-beta-directive.js" class="app"></script>
   <script src="avBooth/review-ballot-directive/review-ballot-directive.js" class="app"></script>
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
