--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.html
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.html
@@ -54,13 +54,14 @@
               ng-if="!!getUrls(one)['Image URL']"
               ng-src="{{getUrls(one)['Image URL']}}" />
           </div>
-          <h2>{{one.text}}</h2>
+          <h2 ng-bind-html="one.text"></h2>
           <div class="links">
             <a
               class="text-left"
               target="_blank"
               ng-if="!!getUrls(one)['URL']"
               href="{{getUrls(one)['URL']}}"
+              ng-click="$event.stopPropagation(); window.open(getUrls(one)['URL'],'_blank')"
               ng-i18next>
               avBooth.pairwiseBeta.web
             </a>
@@ -70,7 +71,7 @@
               {{one.category}}
             </div>
           </div>
-          <p class="description">{{two.details}}</p>
+          <p class="description" ng-bind-html="one.details"></p>
         </div>
       </div>
 
@@ -83,13 +84,14 @@
               ng-if="!!getUrls(two)['Image URL']"
               ng-src="{{getUrls(two)['Image URL']}}" />
           </div>
-          <h2>{{two.text}}</h2>
+          <h2 ng-bind-html="two.text"></h2>
           <div class="links">
             <a
               class="text-left"
               target="_blank"
               ng-if="!!getUrls(two)['URL']"
               href="{{getUrls(two)['URL']}}"
+              ng-click="$event.stopPropagation(); window.open(getUrls(two)['URL'],'_blank')"
               ng-i18next>
               avBooth.pairwiseBeta.web
             </a>
@@ -99,7 +101,7 @@
               {{two.category}}
             </div>
           </div>
-          <p class="description">{{two.details}}</p>
+          <p class="description" ng-bind-html="two.details"></p>
         </div>
       </div>
     </div>
