--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
   <script src="avAdmin/admin-directives/elcensus/add-csv-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/confirm-remove-people-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/confirm-activate-people-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elcensus/confirm-deactivate-people-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/export-all-census-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus-config/elcensus-config.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
